lib/parser/rulezgrammar.treetop
grammar RulezGrammar
  
  rule root
    ruleor 
  end

  rule ruleor
    ruleand (OR ruleand)* 
  end

  rule ruleand
    rulecmp (AND rulecmp)* 
  end

  rule rulecmp
    ruleadd (LTE ruleadd 
            / GTE ruleadd
            / GT ruleadd
            / LT ruleadd
            / EQ ruleadd
            / NEQ ruleadd)? 
  end

  rule ruleadd
    rulemult (PLUS rulemult / MINUS rulemult)* 
  end

  rule rulemult
    ruleunary (MUL ruleunary / DIV ruleunary)* 
  end

  rule ruleunary
    MINUS primary 
    / NOT primary 
    / primary 
  end

  rule primary
    BOOL / DATETIME / DATE / NUM / SYMBOL / RO ruleor RC
  end

  rule OR
    '||'
  end

  rule AND
    '&&'
  end

  rule LTE
    '<='
  end

  rule GTE
    '>='
  end

  rule GT
    '>'
  end

  rule LT
    '<'
  end

  rule EQ
    '=='
  end

  rule NEQ
    '!='
  end

  rule PLUS
    '+'
  end

  rule MINUS
    '-'
  end

  rule MUL
    '*'
  end

  rule DIV
    '/'
  end

  rule NOT
    '!'
  end

  rule RO
    '('
  end

  rule RC
    ')'
  end

  rule SYMBOL
    ID ('.' ID ('("' primary '")')? )*
  end

  rule ID
    [a-zA-Z] [a-zA-Z_0-9]* 
  end

  rule NUM 
    [0-9]+ '.' [0-9]+ / [0-9]+
  end

  rule BOOL
    'true' / 'false'
  end

  rule DATE
    (
      ([012] [0-9] / [3] [01]) '//' ([0] [13578] / [1] [02]) /  # mesi di 31 giorni
      ([012] [0-9] / [3] [0]) '//' ([0] [469] / [1] [1]) /      # mesi di 30 giorni
      ([012] [0-9]) '//' ([0] [2])                              # febbraio (previsto anno bisestile)
    ) '//' [0-9] 1..4
  end

  rule DATETIME
    DATE '#' ([01] [0-9] / [2] [0-3]) ':' [0-5] [0-9] ':' [0-5] [0-9]
  end

end
